--- a/action.yaml
+++ b/action.yaml
@@ -35,8 +35,8 @@ runs:
         REF: ${{ inputs.ref }}
         INPUTS: ${{ toJson(inputs) }}
       run: |
-        echo "${INPUTS}"
         PAYLOAD="{'ref': '${REF}', 'inputs': '${INPUTS}'}"
+        echo "${PAYLOAD}"
         RESPONSE=$(curl -X POST "https://api.github.com/repos/${{ github.repository }}/actions/workflows/${WORKFLOW_FILE}/dispatches" \
           -H "Authorization: Bearer ${REPO_TOKEN}" \
           -H "Accept: application/vnd.github.v3+json" \
