"#2 add parsed input"

--- a/.github/workflows/triggered.yaml
+++ b/.github/workflows/triggered.yaml
@@ -1,6 +1,10 @@
 name: triggered
 on:
   workflow_dispatch:
+    inputs:
+      ref:
+        type: string
+        required: true
 jobs:
   trigger:
     runs-on: ubuntu-latest
