--- a/action.yaml
+++ b/action.yaml
@@ -33,12 +33,11 @@ runs:
         REPO_TOKEN: ${{ inputs.GITHUB_TOKEN }}
         WORKFLOW_FILE: ${{ inputs.file }}
         REF: ${{ inputs.ref }}
-        INPUTS: ${{ toJson(inputs) }}
+        INPUTS: ${{ toJSON(inputs) }}
       run: |
-        PAYLOAD="{'ref': '${REF}', 'inputs': '${INPUTS}'}"
-        echo "${PAYLOAD}"
+        PAYLOAD="{ \"ref\": \"${REF}\", \"inputs\":${INPUTS} }"
+        PARSED_PAYLOAD=$( echo ${PAYLOAD} | jq -r 'del(.inputs.GITHUB_TOKEN)|del(.inputs.file)')
         RESPONSE=$(curl -X POST "https://api.github.com/repos/${{ github.repository }}/actions/workflows/${WORKFLOW_FILE}/dispatches" \
           -H "Authorization: Bearer ${REPO_TOKEN}" \
           -H "Accept: application/vnd.github.v3+json" \
-          -d "${PAYLOAD}")
-        echo "${RESPONSE}"
+          -d "${PARSED_PAYLOAD}")        
