ref input is not needed since workflow starts with the right ref

--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -13,3 +13,4 @@ jobs:
           ref: test
           file: triggered.yaml
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          toon: test
